# long_arithmetic

./: CMakeLists.txt  README.md  main  main.cpp
libs/CalcPi/: CalcPi.cpp  CalcPi.h
libs/LongNums/: LongNums.cpp  LongNums.h
test/: test.cpp
